# Sisteme-Distribuite

./: README.md
AngularFrontEnd/: Dockerfile  package-lock.json  package.json
AngularFrontEnd/src/: Dockerfile  main.ts  styles.css
AngularFrontEnd/src/app/: app.component.html  app.component.ts  app.config.ts
AngularFrontEnd/src/app/admin-view/: admin-view.component.css  admin-view.component.html  admin-view.component.ts
AngularFrontEnd/src/app/chart/: chart.component.ts
AngularFrontEnd/src/app/chat-box/: chat-box.component.html  chat-box.component.ts
AngularFrontEnd/src/app/device-card/: device-card.component.css  device-card.component.html  device-card.component.ts
AngularFrontEnd/src/app/device-card-user/: device-card-user.component.css  device-card-user.component.html  device-card-user.component.spec.ts  device-card-user.component.ts
AngularFrontEnd/src/app/device-create-card-user/: device-create-card-user.component.css  device-create-card-user.component.html  device-create-card-user.component.spec.ts  device-create-card-user.component.ts
AngularFrontEnd/src/models/: create-user.ts  device-user.ts  device.ts  reading.ts  role.ts
AngularFrontEnd/src/services/: auth.service.ts  chat.service.ts  device.service.ts  monitor.service.ts  role.service.ts  user.service.ts
CSV_Decoder/: Cargo.toml
CSV_Decoder/src/: main.rs
ChatMicroservice/: Dockerfile  package-lock.json  pom.xml
DeviceMicroservice/: Dockerfile  pom.xml
Monitoring-CommunicationMicroservice/: Dockerfile  pom.xml
UserMicroservice/: Dockerfile  docker-compose.yml  pom.xml
(+101 files in other folders)
