[package]
name = "CSV_Decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
amqprs = "1.5.1"
lapin = "2.3.1"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.4.0"
tokio = { version = "1", features = ["full"] }
time = "0.3.30"
config = { version = "0.13.4", features = [] }
toml = { version = "0.8.8", features = [] }
actix-web = "4.4.0"
